--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,14 @@
 
 @import "bootstrap";
 @import "devise_bootstrap_views";
+
+body {
+    padding-top: 70px;
+    padding-bottom: 30px;
+  }
+.panel.panel-default.devise-bs{
+    width:300px;
+    border-radius: 10px;
+    background-color: #B8F2F3;
+    padding: 0 20px 20px 20px;
+}
