navbarにdevise関連のリンクを作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
 @import "bootstrap";
 @import "devise_bootstrap_views";
 
-body {
+.container {
     padding-top: 70px;
     padding-bottom: 30px;
   }
