omniauth facebook、twitterのログイン基盤の設置、 ログイン画面、アカント登録画面のボタン配置変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,11 +12,14 @@
  *
  *= require_tree .
  *= require_self
+ *= require bootstrap-social
+ *= require font-awesome
  */
 
 @import "bootstrap";
 @import "devise_bootstrap_views";
-
+@import "bootstrap-social";
+@import "font-awesome";
 .container {
     padding-top: 70px;
     padding-bottom: 30px;
