--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -1,3 +1,9 @@
+%h2 SNSログインはこちらから
+- unless user_signed_in?
+  = link_to "facebookでログイン", user_facebook_omniauth_authorize_path, class: "fa fa-facebook btn btn-facebook"
+  = link_to "Twitterでログイン",  user_twitter_omniauth_authorize_path, class: "fa fa-twitter btn btn-twitter"
+  %br
+  %br
 - if controller_name != 'sessions'
   = link_to t('.sign_in', default: 'Sign in'), new_session_path(resource_name), class: "btn btn-secondary"
   %br/
@@ -15,5 +21,5 @@
   %br/
 - if devise_mapping.omniauthable?
   - resource_class.omniauth_providers.each do |provider|
-    = link_to t('.sign_in_with_provider', provider: provider.to_s.titleize, default: "Sign in with #{provider.to_s.titleize}"), omniauth_authorize_path(resource_name, provider)
+    -# = link_to t('.sign_in_with_provider', provider: provider.to_s.titleize, default: "Sign in with #{provider.to_s.titleize}"), omniauth_authorize_path(resource_name, provider)
     %br/
